# rag-demo

./: README.md  pyproject.toml
src/: main.py
src/data/: docs.txt
src/rag/: loader.py  pipeline.py  vector_store.py
web/: index.html
